--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,3 +37,18 @@ iframe#tela{
     width: 265px;
     height: 472px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+section > a > img:hover{
+    border: 2px solid white;
+    transform: scale(1.1);
+    transition: 0.7s;
+}
