--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,6 +49,7 @@ section#redes-sociais img{
 }
 section > a > img:hover{
     border: 2px solid white;
-    transform: scale(1.1);
-    transition: 0.7s;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transform .5s, border 1s;
 }
